Added assign sheet to playlist API to the service
